# metdata

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  create_nc.sh  environment.yml  pyproject.toml  requirements.txt  setup.cfg
examples/: export_gwo_gotm.sample.py  ghi.ipynb  gwo_hourly_example.ipynb  whp2gwo.ipynb
metdata/: __init__.py  gwo.py  gwo_stn.csv  stations.py  whp.py
scripts/: check_netcdf_missing.py  gwo_to_cf_netcdf.py  interpolate_netcdf.py  plot_netcdf_timeseries.py
tests/: test_stations.py
