[metadata]
name = metdata
version = attr: metdata.__version__
url = https://github.com/jsasaki-utokyo/metdata
author = Jun Sasaki
author_email = jsasaki.ece@gmail.com
license_files = LICENSE
description = metdata: Handling meteorological data
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
